# big2-ai

./: README.md
big2-ai/cpp/: analysis.py  decision_tree_tester.py  game.cpp  game.h  game_coordinator.cpp  game_coordinator.h  game_record.cpp  game_record.h  game_simulator.h  greedy_player.h  greedy_player_factory.h  last_player_analysis.py  main.cpp  move.cpp  move.h  partial_game.cpp  partial_game.h  player_factory.h  random_player.cpp  random_player.h  random_player_factory.cpp  random_player_factory.h  xgboost_test.py
big2-ai/cpp/features/: feature_extractor.h
big2-ai/cpp/features/game_level/: length_feature.h  outcome_feature.h
big2-ai/cpp/features/turn_level/: ace_feature.h  bomb_feature.h  has_two_feature.h  (+19 more)
big2-ai/cpp/new_trainer/: Makefile  analysis.py  game.cpp  game.h  game_coordinator.cpp  game_coordinator.h  game_record.cpp  game_record.h  game_simulator.cpp  game_simulator.h  main.cpp  main_random.cpp  move.cpp  move.h  partial_game.cpp  partial_game.h  player.h  player_factory.h  random_player.cpp  random_player.h  random_player_factory.cpp  random_player_factory.h  util.cpp  util.h
big2-ai/cpp/old_trainer/: CMakeLists.txt  game.cpp  game.h  greedyplayer.cpp  greedyplayer.h  greedytrainer.cpp  greedytrainer.h  main.cpp  main_big.cpp  move.cpp  move.h  node.cpp  node.h  selfplayer.cpp  selfplayer.h  trainer.cpp  trainer.h  tree.cpp  tree.h  util.cpp  util.h
research/: avg_game_length.cpp  avg_moves  avg_moves.cpp  best_hand.cpp  count_num_hands.py  endgame.cpp  endgame.py  max_moves.py  multi_comb.cpp  play_probs.cpp  play_probs.py
(+1 files in other folders)
